# payeriq

./: .env.example  .gitignore  docker-compose.yml
backend/: alembic.ini  load_medicare_data.py  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  contracts.py  medicare.py  negotiation.py  practices.py  rates.py  reports.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  contract.py  contract_rate.py  medicare.py  practice.py  user.py
backend/app/schemas/: auth.py  contract.py  practice.py
backend/app/services/: comparison.py  extraction.py  medicare_loader.py  negotiation.py  report.py
backend/migrations/: env.py
backend/migrations/versions/: 2549f950b99c_initial.py  2f1bf95db81c_add_commercial_benchmarks.py  71c4eb09a902_add_benchmark_fields_to_contract_rates.py  724548b35af2_add_gpci_carrier_to_practices.py  a3c7e1f2d4b6_mvp_additions.py  ba88eea74ebd_add_lab_fee_schedule_and_utilization_.py
backend/templates/: report.html
frontend/: index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ContractUpload.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  Negotiation.jsx  PracticeSetup.jsx  RateReview.jsx  Register.jsx  Report.jsx
