[project]
name = "payeriq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pydantic[email]>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "anthropic>=0.43",
    "httpx>=0.28",
    "weasyprint>=63",
    "jinja2>=3.1",
]
